welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^SnakeBuggle:7: warning: enclosing method arriver has result type Unit: return value discarded
    return true
    ^SnakeBuggle:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:9: warning: enclosing method arriver has result type Unit: return value discarded
  return false
  ^SnakeBuggle:13: error: value unary_! is not a member of Unit
  while(!arriver){
        ^SnakeBuggle:16: error: value droite is not a member of Unit
      droite();avance()droite();
                       ^SnakeBuggle:19: error: value gauche is not a member of Unit
      gauche();avance()gauche();
                       ^